--- a/src/main/res/raw/help.html
+++ b/src/main/res/raw/help.html
@@ -15,20 +15,7 @@
 		<h1>Hilfe</h1>
 		<div id="content">
 			<h2>Funktionen</h2>
-			<ul>
-				<li><a href="#marklist">Notenlisten erstellen</a></li>
-				<li>Noten berechnen</li>
-				<li>Stundenpläne erstellen</li>
-				<li>Notizen erstellen</li>
-				<li>ToDo-Listen erstellen</li>
-				<li>SchulTimer</li>
-				<li>in diverse Formate importieren und exportieren</li>
-			</ul>
-		</div>
-
-		<div id="marklist">
-			<h2>Notenlisten erstellen</h2>
-
+			<p>Hier folgt bald eine Hilfe!</p>
 		</div>
 	</body>
 </html>
